--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>Namari - Free Landing Page Template</title>
+    <title>Full Stack Developer Portfoliocd</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
